kubernetes/003_simple-nginx_istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-nginx
spec:
  hosts:
    - ${DOCKER_APPLICATION_FQDN}
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: simple-nginx
            port:
              number: 80
